# ribbit_ai

./: README.md  perch-audio-preprocess  perch-audio-preprocess.ipynb  pyproject.toml
src/: embeddings_processing.ipynb  ribbit_edaanuraset.ipynb
src/inference_service/: utils.py
